--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <div class="[praia1]"><img src="img/domingo-a-noite-domingo-a-noite-v0-0fukzspuum4d1.webp" alt=""</div>
+        <div class="[praia1]"><img src="./img/domingo-a-noite-domingo-a-noite-v0-0fukzspuum4d1.webp" alt=""</div>
         <h3>Column 1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       </div>
       <div class="col-sm-4">
-        <div class="[praia1]"><img src="img/images.jpeg" alt=""</div>
+        <div class="[praia1]"><img src="./img/images.jpeg" alt=""</div>
         <h3>Column 2</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       </div>
       <div class="col-sm-4">
-        <div class="[praia1]"><img src="img/domingo-a-noite-domingo-a-noite-v0-0fukzspuum4d1.webp" alt=""</div>
+        <div class="[praia1]"><img src="./img/10654e69e24cb9873357b3a0760a6dd1.webp" alt=""</div>
         <h3>Column 3</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
